<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bogomolov.mynotes.ShowNote"
    android:orientation="vertical">

    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoteExamp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DateExamp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DescriptionExamp"
        android:gravity="center"
        android:textColor="@color/black"/>

</LinearLayout>